feat(i18n): Re-factoring the I18nManager.

--- a/cherry-base-i18n/src/main/resources/i18n/time/month_af.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_af.properties
@@ -18,7 +18,7 @@ month.APRIL.name=April
 month.DECEMBER.name=Desember
 month.FEBRUARY.name=Februarie
 month.SEPTEMBER.name=September
-month.MARCH.name=optog
+month.MARCH.name=Optog
 month.OCTOBER.name=Oktober
 month.JULY.name=Julie
 month.NOVEMBER.name=November
