--- a/cherry-base-i18n/src/main/resources/i18n/time/month_cs.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_cs.properties
@@ -11,14 +11,14 @@
 #
 
 month.JANUARY.name=leden
-month.JUNE.name=červen
+month.JUNE.name=\u010Derven
 month.AUGUST.name=srpen
-month.MAY.name=smět
+month.MAY.name=sm\u011Bt
 month.APRIL.name=duben
 month.DECEMBER.name=prosinec
-month.FEBRUARY.name=Únor
-month.SEPTEMBER.name=září
-month.MARCH.name=březen
-month.OCTOBER.name=říjen
-month.JULY.name=červenec
+month.FEBRUARY.name=\u00DAnor
+month.SEPTEMBER.name=z\u00E1\u0159\u00ED
+month.MARCH.name=B\u0159ezen
+month.OCTOBER.name=\u0159\u00EDjen
+month.JULY.name=\u010Dervenec
 month.NOVEMBER.name=listopad
