--- a/cherry-base-i18n/src/main/resources/i18n/time/month_de.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_de.properties
@@ -1,11 +1,11 @@
 month.APRIL.name=april
 month.AUGUST.name=august
-month.DECEMBER.name=dezember
+month.DECEMBER.name=Dezember
 month.FEBRUARY.name=februar
 month.JANUARY.name=januar
-month.JULY.name=juli
+month.JULY.name=Juli
 month.JUNE.name=juni
-month.MARCH.name=märz
+month.MARCH.name=M\u00E4rz
 month.MAY.name=mai
 month.NOVEMBER.name=november
 month.OCTOBER.name=oktober
