--- a/cherry-base-i18n/src/main/resources/i18n/time/month_et.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_et.properties
@@ -18,7 +18,7 @@ month.APRIL.name=aprill
 month.DECEMBER.name=detsember
 month.FEBRUARY.name=veebruar
 month.SEPTEMBER.name=september
-month.MARCH.name=marss
+month.MARCH.name=Marss
 month.OCTOBER.name=oktoober
-month.JULY.name=juuli
+month.JULY.name=Juuli
 month.NOVEMBER.name=novembrini
