--- a/cherry-base-i18n/src/main/resources/i18n/time/month_hu.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_hu.properties
@@ -10,14 +10,14 @@
 # --------------------------------------------------------------------------------------
 #
 
-month.JANUARY.name=január
-month.JUNE.name=június
+month.JANUARY.name=janu\u00E1r
+month.JUNE.name=j\u00FAnius
 month.AUGUST.name=augusztus
 month.MAY.name=lehet
 month.DECEMBER.name=december
-month.FEBRUARY.name=február
+month.FEBRUARY.name=febru\u00E1r
 month.SEPTEMBER.name=szeptember
-month.MARCH.name=március
-month.OCTOBER.name=október
-month.JULY.name=július
+month.MARCH.name=M\u00E1rcius
+month.OCTOBER.name=okt\u00F3ber
+month.JULY.name=J\u00FAlius
 month.NOVEMBER.name=november
