--- a/cherry-base-i18n/src/main/resources/i18n/time/month_it.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_it.properties
@@ -3,9 +3,9 @@ month.AUGUST.name=agosto
 month.DECEMBER.name=dicembre
 month.FEBRUARY.name=febbraio
 month.JANUARY.name=gennaio
-month.JULY.name=luglio
+month.JULY.name=Luglio
 month.JUNE.name=giugno
-month.MARCH.name=marzo
+month.MARCH.name=Marzo
 month.MAY.name=maggio
 month.NOVEMBER.name=novembre
 month.OCTOBER.name=ottobre
