--- a/cherry-base-i18n/src/main/resources/i18n/time/month_ro.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_ro.properties
@@ -20,5 +20,5 @@ month.FEBRUARY.name=februarie
 month.SEPTEMBER.name=Septembrie
 month.MARCH.name=Martie
 month.OCTOBER.name=octombrie
-month.JULY.name=iulie
+month.JULY.name=Iulie
 month.NOVEMBER.name=noiembrie
