--- a/cherry-base-i18n/src/main/resources/i18n/time/month_sq.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_sq.properties
@@ -18,7 +18,7 @@ month.APRIL.name=prill
 month.DECEMBER.name=dhjetor
 month.FEBRUARY.name=shkurt
 month.SEPTEMBER.name=shtator
-month.MARCH.name=marsh
+month.MARCH.name=Marsh
 month.OCTOBER.name=tetor
-month.JULY.name=korrik
-month.NOVEMBER.name=Nëntori
+month.JULY.name=Korrik
+month.NOVEMBER.name=N\u00EBntori
