--- a/cherry-base-i18n/src/main/resources/i18n/time/month_fi.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_fi.properties
@@ -11,14 +11,14 @@
 #
 
 month.JANUARY.name=tammikuu
-month.JUNE.name=kesäkuu
+month.JUNE.name=kes\u00E4kuu
 month.AUGUST.name=elokuu
 month.MAY.name=saattaa
 month.APRIL.name=huhtikuu
 month.DECEMBER.name=joulukuu
 month.FEBRUARY.name=helmikuu
 month.SEPTEMBER.name=syyskuu
-month.MARCH.name=marssi
+month.MARCH.name=Marssi
 month.OCTOBER.name=lokakuu
-month.JULY.name=heinäkuu
+month.JULY.name=Hein\u00E4kuu
 month.NOVEMBER.name=marraskuu
