--- a/cherry-base-i18n/src/main/resources/i18n/time/month_fr.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_fr.properties
@@ -3,9 +3,9 @@ month.AUGUST.name=ao\u00FBt
 month.DECEMBER.name=d\u00E9cembre
 month.FEBRUARY.name=f\u00E9vrier
 month.JANUARY.name=Janvier
-month.JULY.name=juillet
+month.JULY.name=Juillet
 month.JUNE.name=juin
-month.MARCH.name=mars
+month.MARCH.name=Mars
 month.MAY.name=mai
 month.NOVEMBER.name=novembre
 month.OCTOBER.name=octobre
