--- a/cherry-base-i18n/src/main/resources/i18n/time/month_nl.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_nl.properties
@@ -18,7 +18,7 @@ month.APRIL.name=april
 month.DECEMBER.name=december
 month.FEBRUARY.name=februari
 month.SEPTEMBER.name=september
-month.MARCH.name=maart
+month.MARCH.name=Maart
 month.OCTOBER.name=oktober
-month.JULY.name=juli
+month.JULY.name=Juli
 month.NOVEMBER.name=november
