--- a/cherry-base-i18n/src/main/resources/i18n/time/month_pl.properties
+++ b/cherry-base-i18n/src/main/resources/i18n/time/month_pl.properties
@@ -10,14 +10,14 @@
 # --------------------------------------------------------------------------------------
 #
 
-month.JANUARY.name=styczeń
+month.JANUARY.name=stycze\u0144
 month.JUNE.name=czerwiec
-month.AUGUST.name=sierpień
-month.MAY.name=może
-month.DECEMBER.name=grudzień
+month.AUGUST.name=sierpie\u0144
+month.MAY.name=mo\u017Ce
+month.DECEMBER.name=grudzie\u0144
 month.FEBRUARY.name=luty
-month.SEPTEMBER.name=wrzesień
+month.SEPTEMBER.name=wrzesie\u0144
 month.MARCH.name=Marsz
-month.OCTOBER.name=październik
-month.JULY.name=lipiec
+month.OCTOBER.name=pa\u017Adziernik
+month.JULY.name=Lipiec
 month.NOVEMBER.name=listopad
